exports[`(.not).toHaveTooManyRequestsStatus > using axios > .not.toHaveTooManyRequestsStatus > fails when response have status code 429 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveTooManyRequestsStatus()</intensity>

Expected status code to not be 429 received:
  <red>429</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 429,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveTooManyRequestsStatus > using axios > .toHaveTooManyRequestsStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveTooManyRequestsStatus()</intensity>

Expected status code to be 429 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
